<resources>
    <string name="app_name">xkcd</string>

    <!-- login page -->
    <string name="login_button">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">XKCD Comic Viewer</string>
    <string name="login_author">Sarim Mehdi</string>
    <string name="login_background_img_description">
        This is the background image displayed on the login page</string>

    <!-- comic viewing page -->
    <string name="comic_title">TITLE</string>
    <string name="comic_issue">ISSUE NUMBER</string>
    <string name="comic_release">RELEASE YEAR</string>
    <string name="comic_month">MONTH</string>
    <string name="comic_day">DAY</string>
    <string name="comic_transcript">TRANSCRIPT</string>
    <string name="comic_explanation">EXPLANATION</string>
    <string name="comic_search_online">SEARCH</string>
    <string name="send_comic_to_someone">Send comic to someone</string>
    <string name="send_comic_placeholder_string">goodbuddy@email.com</string>
    <string name="comic_search_online_description">Search online for a comic</string>
    <string name="comic_img_description">This is the image for displaying the comic</string>
    <string name="comic_transcript_description">This is the transcript for the comic</string>
    <string name="comic_explanation_description">This is the explanation for the comic</string>
    <string name="comic_favorite_btn_description">
        Press this to mark the comic as favorite</string>

    <!-- button tabs -->
    <string name="tab_favorites">FAVORITES</string>
    <string name="tab_all_comic">ALL COMICS</string>
    <string name="search_btn_description">This will allow you to search for comics</string>
    <string name="next_page_btn_description">This will take you to the next page of comics</string>
    <string name="prev_page_btn_description">
        This will take you to the previous page of comics</string>
    <string name="page_number_edittext_hint">
        Type a number here to jump several pages forward or backwards</string>

    <!-- email sent to another person -->
    <string name="email_subject">Check out this cool comic!</string>
    <string name="email_send_title">Send this email to %1$s</string>

    <!-- for setting up notifications channel -->
    <string name="notification_new_comic_id">comic</string>
    <string name="notification_new_comic_name">
        checking whether a new comic was published or not</string>
    <string name="notification_new_comic_desc">
        this notification tells us whether there a new comic was published</string>
    <string name="notification_new_comic_msg">
        a new comic number %1$s was published!</string>

    <!-- toast messages -->
    <string name="toast_unable_to_send_email">Unable to send email to address %1$s, reason:\n%2$s</string>
    <string name="toast_invalid_email">%1$s is not a valid email address</string>
    <string name="toast_invalid_page_number">%1$s is not a valid page number</string>
</resources>