<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="comicAdapter"
            type="com.sarim.xkcd.ui.ComicAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="826dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comicListRecycler"
            android:layout_width="389dp"
            android:layout_height="681dp"
            android:adapter="@{comicAdapter}"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/favoritesTab"
            android:layout_width="202dp"
            android:layout_height="75dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/xkcd"
            android:text="@string/tab_favorites"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/comicListRecycler"
            app:layout_constraintEnd_toStartOf="@+id/allComicsTab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/allComicsTab"
            android:layout_width="205dp"
            android:layout_height="74dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/xkcd"
            android:text="@string/tab_all_comic"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/comicListRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="616dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/search_btn_description"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/comicListRecycler"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>