<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="comic"
            type="com.sarim.xkcd.comic.Comic" />
        <variable
            name="imgDatabinding"
            type="com.sarim.xkcd.ui.databinding.ImgDatabinding" />
        <variable
            name="onExplanationClicked"
            type="com.sarim.xkcd.ui.interfaces.ExplanationClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/comic_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/comic_img_description"
            app:imageUrl="@{comic}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/comic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xkcd"
            android:text="@{@string/comic_title + `: ` + comic.title}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/comic_img"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_img"
            app:layout_constraintVertical_bias="0.010" />

        <TextView
            android:id="@+id/comic_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xkcd"
            android:text="@{@string/comic_issue + `: ` + Integer.toString(comic.num)}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/comic_img"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_title"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/comic_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xkcd"
            android:text="@{@string/comic_release + `: ` + comic.year}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/comic_img"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_issue"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/comic_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xkcd"
            android:text="@{@string/comic_month + `: ` + comic.month}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/comic_img"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_release"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/comic_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xkcd"
            android:text="@{@string/comic_day + `: ` + comic.day}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/comic_img"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_month"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/comic_transcript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/xkcd"
            android:text="@string/comic_transcript"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/comic_img"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_day"
            app:layout_constraintVertical_bias="0.05" />

        <ScrollView
            android:id="@+id/transcript_scrollview"
            android:layout_width="302dp"
            android:layout_height="161dp"
            android:contentDescription="@string/comic_transcript_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comic_transcript"
            app:layout_constraintVertical_bias="0.05">

            <LinearLayout
                android:id="@+id/scrollable_transcript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{comic.transcript}" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/explanationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/xkcd"
            android:onClick="@{() -> onExplanationClicked.explanationClicked(comic)}"
            android:text="@string/comic_explanation"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transcript_scrollview"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/receipentEmailAddress"
            android:layout_width="186dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="31dp"
            android:ems="10"
            android:fontFamily="@font/xkcd"
            android:gravity="center"
            android:hint="@string/send_comic_placeholder_string"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/explanationBtn"
            app:layout_constraintTop_toBottomOf="@+id/transcript_scrollview"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/receipentEmailTextView"
            android:layout_width="175dp"
            android:layout_height="25dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/xkcd"
            android:gravity="center"
            android:text="@string/send_comic_to_someone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receipentEmailAddress"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>